# PDF-editor-full-featured

./: .env.example  .gitignore  App_Launcher.bat  App_Launcher.ps1  CHANGELOG.md  CODE_QUALITY_REPORT.md  CONTRIBUTING.md  LICENSE  PERFORMANCE_AUDIT.md  README.md  Ultra_PDF_Editor.py  config.py  main.py  pyproject.toml  register_file_association.ps1  requirements.txt  test_tools.py
.claude/: settings.local.json
annotations/: __init__.py  base.py
core/: pdf_document.py
core/converters/: __init__.py  to_image.py  to_word.py
core/operations/: __init__.py  ocr.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  AUDIT_TODO.md  BROKEN_FEATURES_REPORT.md  FEATURE_AUDIT_REPORT.md  IMPROVEMENTS_AUDIT.md  USER_GUIDE.md  index.md
forms/: form_field.py
resources/styles/: dark_theme.qss  light_theme.qss
tests/: conftest.py  test_config.py  test_edit_text_gui.py  test_file_utils.py  test_gui_smoke.py  test_history.py  test_pdf_document.py  test_text_block_edit.py  test_text_selection.py
ui/: inline_text_editor.py  main_window.py  pdf_viewer.py  sidebar.py  theme.py  toolbar.py  workers.py
ui/dialogs/: __init__.py  batch_dialog.py  clean_pdf_dialog.py  crop_dialog.py  extract_pages_dialog.py  find_dialog.py  header_footer_dialog.py  merge_dialog.py  remove_header_footer_dialog.py  settings_dialog.py  split_dialog.py
ui/handlers/: __init__.py  _context.py  annotation_handler.py  edit_handler.py  file_handler.py  page_handler.py  tools_handler.py  view_handler.py
utils/: file_utils.py  history.py  tesseract.py
