[project]
name = "ultra-pdf-editor"
version = "1.0.0"
description = "A powerful yet simple PDF editor with all professional features"
requires-python = ">=3.10"
dependencies = [
    # Core GUI Framework
    "PyQt6>=6.6.0",
    "PyQt6-WebEngine>=6.6.0",

    # PDF Processing
    "PyMuPDF>=1.23.0",
    "pypdf>=3.17.0",
    "pikepdf>=8.10.0",

    # PDF Generation
    "reportlab>=4.0.0",

    # Image Processing
    "Pillow>=10.2.0",
    "pdf2image>=1.16.0",

    # OCR
    "pytesseract>=0.3.10",

    # Document Conversion
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",

    # Text/Table Extraction
    "pdfplumber>=0.10.0",

    # Security
    "cryptography>=41.0.0",

    # Utilities
    "natsort>=8.4.0",
    "send2trash>=1.8.0",
    "darkdetect>=0.8.0",
]

[project.scripts]
ultra-pdf-editor = "Ultra_PDF_Editor:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.2.0",
    "ruff>=0.1.0",
]
