[project]
name = "ultra-pdf-editor"
version = "1.0.0"
description = "A powerful yet simple PDF editor with all professional features"
requires-python = ">=3.10"
dependencies = [
    # Core GUI Framework
    "PyQt6>=6.6.0",

    # PDF rendering & manipulation (fitz)
    "PyMuPDF>=1.23.0",

    # Image processing (page rasterisation for OCR / export)
    "Pillow>=10.2.0",

    # OCR
    "pytesseract>=0.3.10",    # OCR wrapper for Tesseract

    # Word export
    "python-docx>=1.1.0",

    # Utilities
    "send2trash>=1.8.0",      # Safe file deletion
    "darkdetect>=0.8.0",      # System theme detection
]

[project.scripts]
ultra-pdf-editor = "Ultra_PDF_Editor:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.2.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
